--- a/user-test/index.html
+++ b/user-test/index.html
@@ -1002,6 +1002,51 @@
                     </div>
                 </div>
 
+                <div class="flex-control">
+                    <div>
+                        <label for="areaEnable">Area</label>
+                        <input type="checkbox" name="areaEnable" id="areaEnable">
+                    </div>
+                    <div>
+                        <label for="areaTop">Top </label>
+                        <select name="areaTop" id="areaTop">
+                            <option value="linear">Linear</option>
+                            <option value="cosine">Cosine</option>
+                            <option value="cuadratic">Cuadratic</option>
+                            <option value="log">Log</option>
+                        </select>
+                    </div>
+                </div>
+
+                <div class="flex-control">
+                    <div>
+                        <label for="areaBottom">Bottom </label>
+                        <select name="areaBottom" id="areaBottom">
+                            <option value="base">Base</option>
+                            <option value="linear">Linear</option>
+                            <option value="cosine">Cosine</option>
+                            <option value="cuadratic">Cuadratic</option>
+                            <option value="log">Log</option>
+                        </select>
+                    </div>
+                    <div>
+                        <label for="areaColor">Area Color</label>
+                        <input type="color" name="areaColor" id="areaColor" class="color-input" value="#0043e0"> 
+                    </div>
+                </div>
+                <div class="flex-control">
+                    <div>
+                        <label for="areaOpacity">Area Opacity</label>
+                        <input type="number" name="areaOpacity" id="areaOpacity" min="0" max="1" step="0.05" value="0.3" class="number-input">
+                    </div>
+                    <div>
+                        <label for="areaFrom">From</label>
+                        <input type="number" name="areaFrom" id="areaFrom" step="0.01" value="-2" style="width: 50px;">
+                        <label for="areaTo">To</label>
+                        <input type="number" name="areaTo" id="areaTo" step="0.01" value="2" style="width: 50px;">
+                    </div>
+                </div>
+
             </div>
 
 
