--- a/user-test/index.html
+++ b/user-test/index.html
@@ -1053,6 +1053,285 @@
         </div>
 
 
+        <div class="color-container">
+            <div class="color-type" id="color-RGB">
+                <span>RGB</span>
+                <div class="color-row">
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                </div>
+            </div>
+            <div class="color-type" id="color-HSV">
+                <span>HSV</span>
+                <div class="color-row">
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                </div>
+            </div>
+            <div class="color-type" id="color-XYZ">
+                <span>XYZ</span>
+                <div class="color-row">
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                </div>
+            </div>
+            <div class="color-type" id="color-LAB">
+                <span>LAB</span>
+                <div class="color-row">
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                </div>
+            </div>
+            <div class="color-type" id="color-LCH">
+                <span>LCH</span>
+                <div class="color-row">
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                    <div class="color-element"></div>
+                </div>
+            </div>
+        </div>
+
+
     </main>
     <script src="index.js" type="module"></script>
 </body>
