--- a/user-test/index.html
+++ b/user-test/index.html
@@ -784,7 +784,8 @@
 
 
         <div class="graph-backplate">
-            <div class="graph"></div>
+            <div class="graph1"></div>
+            <div class="graph2"></div>
         </div>
 
 
